<resources>
    <string name="app_name">kullaniciApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="prompt_kat_seciniz">Kat Seçiniz</string>
    <string name="prompt_alan_seciniz">Alan Seçiniz</string>
    <string name="bildirim_mesaji">Mesaj içeriği burada</string>
    <string name="bildirim_zamani">Saat: 18:45</string>
    <string name="bildirim_tipi_ikonu">Bildirim türü ikonu</string>
    <string name="sil_butonu">Sil butonu</string>
    <string name="duzenle_butonu">Düzenle</string>

</resources>
=======
</resources>
>>>>>>> 44d3236e304bccba2f7b47a1a2eb8beafebd2045
